--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
             display: flex;
             gap: 40px;
         }
-        .sidebar {
-            width: 250px;
-            flex-shrink: 0;
-            background: #1e1e1e;
-            padding: 15px;
-            border-radius: 3px;
-        }
         .main-content {
             flex-grow: 1;
             background: #1a1a1a;
             padding: 20px;
             border-radius: 3px;
+            width: 100%;
         }
         table {
             border-collapse: collapse;
@@ -39,28 +33,11 @@
             border: 1px solid #2d2d2d;
             background: #252525;
         }
-        ul {
-            list-style: none;
-            padding-left: 0;
-            margin: 10px 0;
-        }
-        li::before {
-            content: "•";
-            margin-right: 8px;
-            color: #4a4a4a;
-        }
         h1 {
             border-bottom: 2px solid #2d2d2d;
             padding-bottom: 10px;
             color: #ffffff;
             margin-top: 0;
-        }
-        h2 {
-            color: #9e9e9e;
-            border-bottom: 2px solid #2d2d2d;
-            padding-bottom: 5px;
-            font-size: 1.1em;
-            margin: 20px 0 15px 0;
         }
         h3 {
             color: #6c8cff;
@@ -72,23 +49,10 @@
             margin: 5px 0 20px 0;
             line-height: 1.5;
         }
-        .status-table {
-            border: none;
-            margin: 15px 0;
-        }
-        .status-table td {
-            border: none;
-            padding: 4px 0;
-            background: transparent;
-            color: #8a8a8a;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">
-
-
         <div class="main-content">
             <h1>English FAQ</h1>
 
@@ -122,12 +86,7 @@
                 </tr>
             </table>
 
-            <h3>Who is making this man?</h3>
-            <table>
-                <tr>
-                    <td>The mall is being made by new - Epic, Citrix, and Dark Kostas who communicate from other people from the community.</td>
-                </tr>
-            </table>
+
 
             <h3>Done and require the Red Leader?</h3>
             <table>
