--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>When it's ready, however you can check download page and check the reverse-open builds over time.</p>
 
             <h3>When did development start?</h3>
-            <p>26.11.2017</p>
+            <p>March 2025</p>
 
             <h3>Will find support phase copy of the game?</h3>
             <p>No. Most requires original steam copy of the game to work.</p>
